Issue #23214: Implement optional BufferedReader, BytesIO read1() argument